fix +14663 Environment variables popup scrollbar is hidden

--- a/plugins/c9.ide.run/style.css
+++ b/plugins/c9.ide.run/style.css
@@ -94,7 +94,6 @@
 }
 .envcontainer .blackdg{
     border-top: 1px solid #363636;
-    max-height : 300px;
 }
 .tree-row.newenv:not(.selected) {
     color: rgb(151, 151, 151);
